--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,137 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
+body {
+  font-family: "Fredoka", sans-serif;
+}
+.App {
+  background-image: url("./assets/cold-bg.jpg");
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4 ease;
+}
+.App.warm {
+  background-image: url("./assets//warm-bg.jpg");
+}
+main {
+  height: 100vh;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.75)
+  );
+  padding: 25px;
+}
+.search-box {
+  width: 100%;
+  margin: 0 0 75px;
+}
+.search-box .search-bar {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: -10px;
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+  color: #313131;
+  font-size: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  transition: 0.4 ease;
+}
+.search-box .search-bar:focus {
+  background-color: rgba(255, 255, 255, 0.75);
+  border: 1px solid gray;
+}
+.location-box .location {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 400;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+.location-box .date {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+}
+.weather-box {
+  text-align: center;
+}
+.weather-box .temp {
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  padding: 15px 25px;
+
+  color: #fff;
+  font-size: 102px;
+  font-weight: 900;
+
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  text-align: center;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
+.weather-box .weather {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+.error {
+  text-align: center;
+  margin: 30px auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  padding: 15px 25px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: 900;
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+.others{
+    width: 100%;
+    height: 30vh;
+    background: none;
+    display: flex;
+    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+
+}
+.humidity,
+.description,
+.wind,
+.sunrise,
+.sunset{
+    color: #FFF;
+    width: 145px;
+    height: 60px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 5px;
+    padding: 12px;
+    border-radius: 10px;
+}
+.humidity span,
+.description span,
+.wind span,
+.sunrise span,
+.sunset span{
+    font-weight: bold;
+} 
+
+
